// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportUpload selectors should return ReportUpload 1`] = `
Object {
  "processID": 0,
  "status": "some-status",
}
`;

exports[`ReportUpload selectors should return ReportUpload completed 1`] = `25`;

exports[`ReportUpload selectors should return ReportUpload exitCode 0 1`] = `"0"`;

exports[`ReportUpload selectors should return ReportUpload exitCode 1`] = `"--"`;

exports[`ReportUpload selectors should return ReportUpload exitCode 1 1`] = `"1"`;

exports[`ReportUpload selectors should return ReportUpload files 1`] = `
Array [
  "some-file",
]
`;

exports[`ReportUpload selectors should return ReportUpload loading 1`] = `false`;

exports[`ReportUpload selectors should return ReportUpload logs 1`] = `
Array [
  "some-logs...",
]
`;

exports[`ReportUpload selectors should return ReportUpload processID 1`] = `0`;
